<resources>
    <string name="AppName" translatable="false">DroidInfo</string>
    <string name="Benchmark" translatable="false">Benchmark</string>
    <string name="Settings">Settings</string>

    <string name="Close">Close</string>

    <string name="WelcomeTo">Welcome To</string>
    <string name="FirstIntroDescription">Welcome to DroidInfo, follow this tutorial to find out more about this app!</string>
    <string name="SecondIntroTitle">What do this app?</string>
    <string name="SecondIntroDescription">This app can give you more technical information (e.g.
processor architecture, RAM available, GPU Model)</string>
    <string name="ThirdIntroTitle">Who develop this app?</string>
    <string name="ThirdIntroDescription">This app is developed by k4ppaj (Woodstock Inc.) and this project is open-source (you can find it on github.com)</string>
    <string name="FourthIntroTitle">Getting Permission</string>
    <string name="FourthIntroDescription">This app for work well need permission, please agree it.</string>

    <string name="SoC">SoC</string>
    <string name="Device">Device</string>
    <string name="Display">Display</string>
    <string name="Battery">Battery</string>
    <string name="Telephony">Telephony</string>

    <string name="Resolution">Resolution</string>
    <string name="DPI">DPI</string>
    <string name="ScreenSize">Screen size</string>
    <string name="RefreshValue">Refresh value</string>

    <string name="Health">Health</string>
    <string name="Percentage">Percentage</string>
    <string name="PowerSource">Power source</string>
    <string name="Status">Status</string>
    <string name="Temperature">Temperature</string>
    <string name="Technology">Technology</string>
    <string name="Voltage">Voltage</string>
    <string name="Capacity">Capacity</string>

    <string name="Cold">Cold</string>
    <string name="Dead">Dead</string>
    <string name="Good">Good</string>
    <string name="OverVoltage">Over voltage</string>
    <string name="OverHeat">Over heat</string>
    <string name="UnspecifiedFailure">Unspecified failure</string>

    <string name="Charging">Charging</string>
    <string name="Discharging">Discharging</string>
    <string name="Full">Full</string>
    <string name="NotCharging">Not charging</string>

    <string name="Wireless">Wireless Charging</string>
    <string name="USB">USB Source</string>
    <string name="AC">AC Power Source</string>
    <string name="Disconnected">Disconnected</string>

    <string name="AndroidVersion">Android Version</string>
    <string name="APILevel">API Level</string>
    <string name="SecurityPatch">Security patch</string>
    <string name="KernelVersion">Kernel Version</string>
    <string name="KernelArch">Kernel Arch</string>

    <string name="Model">Model</string>
    <string name="Manufacturer">Manufacturer</string>
    <string name="RAM" translatable="false">RAM</string>
    <string name="InternalStorage">Internal Storage</string>
    <string name="ExternalStorage">External Storage</string>
    <string name="RootAccess">Root Access</string>

    <string name="CPUModel">CPU Model</string>
    <string name="CPUCores">CPU Cores</string>
    <string name="CPUFreq">CPU Freq</string>
    <string name="GPUVendor">GPU Vendor</string>
    <string name="GPURenderer">GPU Renderer</string>
    <string name="OpenGLVersion">OpenGL Version</string>

    <string name="DualSIM">Dual SIM</string>
    <string name="IMEI" translatable="false">IMEI</string>
    <!--<string name="Status">Status</string>-->
    <string name="PhoneType">Phone type</string>
    <string name="Operator">Operator</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="NetworkType">Network type</string>

    <string name="Absent">SIM is Absent</string>
    <string name="CardIOError">Card I/O Error</string>
    <string name="CardRestricted">Card Restricted</string>
    <string name="NetworkLocked">Network Locked</string>
    <string name="NotReady">SIM isn\'t ready</string>
    <string name="Ready">SIM is ready</string>
    <string name="PermDisabled">Permanent Disabled</string>
    <string name="PinRequired">Pin Required</string>
    <string name="PukRequired">Puk Required</string>

    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="NotMounted">Not mounted</string>
    <string name="NotPresent">Not present</string>
    <string name="Unknown">Unknown</string>
    <string name="WorkInProgress">This is a work in progress! xD</string>
    <string name="Refresh">Refresh</string>
    <string name="General">General</string>
    <string name="AppNameSettings">Settings</string>
    <string name="Information">Information</string>
    <string name="Author">Author</string>
    <string name="Collaborators">Collaborators</string>
    <string name="Version">Version</string>
    <string name="Donation">Donation</string>
    <string name="Link" translatable="false">Link</string>
    <string name="Debug" translatable="false">Debug</string>
    <string name="DefaultInformation">Use default information</string>
    <string name="DefaultInformationOn">Use pre-set information</string>
    <string name="DefaultInformationOff">Use real device information</string>
    <string name="UnlockDebug">Unlock Debug option</string>
    <string name="UnlockDebugSummary">Enter PIN for use debug option</string>
    <string name="ChooseBenchmarkMode">Choose benckmark mode</string>
    <string name="RunBenchmark">Run benckmark</string>
    <string name="Score">Score</string>
    <string name="InsertPIN">Insert PIN</string>
    <string name="CPUSHA1" translatable="false">CPU (SHA-256)</string>
    <string name="GPUOpenGL" translatable="false">GPU (OpenGL)</string>
    <string name="StartTestBeforeShare">Please, start benchmark before share it!</string>
    <string name="Benchmarking">Running benchmark</string>
    <string name="TimeTaken">Time taken</string>
    <string name="HashValue">Hash value</string>
    <string name="Second">second</string>
    <string name="PINIsIncorrect">Sorry, the PIN is incorrect</string>
    <string name="OptionsLocked">Now options are locked.</string>
    <string name="VoteApplication">Vote app in PlayStore</string>
    <string name="OpenLinks">Do you want open suggested link?</string>
    <string name="Font">Font</string>
    <string name="Aspect">Aspect</string>
    <string name="Features">Features</string>
    <string name="BogoMIPS" translatable="false">BogoMIPS</string>
    <string name="SELinux" translatable="false">SELinux</string>
    <string name="ClickOnItem">Click on item</string>
    <string name="ClickOnItemSummary">Click on listview item to get more info of that (not available for all item)</string>
    <string name="MoreFeature">More feature</string>
    <string name="BogoMIPSInfoTitle">What\'s BogoMIPS?</string>
    <string name="BogoMIPSInfoMessage">BogoMips (from \"bogus\" and MIPS) is an unscientific measurement of CPU speed made by the Linux kernel when it boots to calibrate an internal busy-loop. An often-quoted definition of the term is \"the number of million times per second a processor can do absolutely nothing\"\n\n// Higher is better.\n\nSource: en.wikipedia.org</string>
    <string name="CPUGovernor" translatable="false">CPU Governor</string>
    <string name="CPUFreqCurrent">CPU Freq current</string>
    <string name="Brightness">Brightness</string>
    <string name="Sensor">Sensor</string>
    <string name="Root" translatable="false">Root</string>
    <string name="Accelerometer">Accelerometer</string>
    <string name="Proximity">Proximity</string>
    <string name="Near">Near</string>
    <string name="Far">Far</string>
    <string name="Gyroscope">Gyroscope</string>
    <string name="Magnetometer">Magnetometer</string>
    <string name="ThereAreNothing">There\'s nothing here for now, come back in a bit.</string>
    <string name="BuildID" translatable="false">Build ID</string>
    <string name="Codename">Codename</string>
    <string name="AmbientTemperature">Ambient Temperature</string>
    <string name="Light">Light</string>
    <string name="Pressure">Pressure</string>
    <string name="Humidity">Humidity</string>
    <string name="PermissionDenied">Oh no! You must grant permission else \nyou can\'t use this tab.</string>
    <string name="LenghtOfBit">Lenght of bit</string>
    <string name="Supported">Supported</string>
    <string name="Unsupported">Unsupported</string>
    <string name="Enabled">Enabled</string>
    <string name="Disabled">Disabled</string>
    <string name="SignalStrength">Signal strenght</string>
    <string name="RequiredAPI22">Required API 22</string>
    <string name="StockFirmware">Stock firmware</string>
    <string name="DevsMode">Devs mode</string>
    <string name="DevsModeInfo">Skip all time loses</string>
</resources>
